# Rust-client

./: ARCHITECTURE.md  BOT_IMPROVEMENT_GUIDE.md  README.md  methoden.md
socha-master-2027/: Cargo.toml
socha-master-2027/examples/: random_bot.rs
socha-master-2027/src/: Cargo.toml  error.rs  incoming.rs  internal.rs  lib.rs  neutral.rs  outgoing.rs  socha_com.rs
socha-master-2027/src/examples/: random_bot.rs
socha-master-2027/src/i_client_handler/: handler_trait.rs  mod.rs
socha-master-2027/tests/: make_unmake_move.rs  move_generation_completeness.rs  server_message_parsing.rs  shape_rotation_invariants.rs
socha-master-2027_prototyp_1/: Cargo.toml
socha-master-2027_prototyp_1/examples/: random_bot.rs
socha-master-2027_prototyp_1/src/: incoming.rs  internal.rs  neutral.rs  socha_com.rs
socha-master-2027_prototyp_1/src/i_client_handler/: mod.rs
socha-master-2027_prototyp_2/src/: internal.rs  socha_com.rs
socha-master-2027_v0.1/: Cargo.toml
socha-master-2027_v0.1/src/: internal.rs
socha-master-2027_v0.1/tests/: buffer_limit.rs  disconnect_behaviour.rs  fake_server_lifecycle.rs  server_state_sync.rs  shape_data_integrity.rs  socha_com_framing.rs  xml_robustness_extended.rs
socha-master-2027_v1/: Cargo.toml
socha-master-2027_v1/examples/: bot1.rs  random_bot.rs
socha-master-2027_v1/src/: internal.rs  neutral.rs  outgoing.rs  socha_com.rs
socha-master-2027_v1/src/i_client_handler/: mod.rs
